{
  "version": 4,
  "terraform_version": "0.13.0",
  "serial": 15,
  "lineage": "326507df-2ac5-93c5-0360-899781069513",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:625005514785:security-group/sg-08318821b2a752918",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-08318821b2a752918",
            "ingress": [],
            "name": "default",
            "owner_id": "625005514785",
            "revoke_rules_on_delete": false,
            "tags": null,
            "vpc_id": "vpc-0027bc837f4de0d04"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0332030f77ae73b9d",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-54-220-53-190.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.220.53.190",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:625005514785:internet-gateway/igw-0d294f768f290d026",
            "id": "igw-0d294f768f290d026",
            "owner_id": "625005514785",
            "vpc_id": "vpc-0027bc837f4de0d04"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0aeae881e742efc06",
            "owner_id": "625005514785",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "vpc_id": "vpc-0027bc837f4de0d04"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-000b2f1cbbe94bc1b",
            "owner_id": "625005514785",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "vpc_id": "vpc-0027bc837f4de0d04"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03c4dead09f4e26e7",
            "owner_id": "625005514785",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "vpc_id": "vpc-0027bc837f4de0d04"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a71d0fb1152ccda8",
            "owner_id": "625005514785",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "vpc_id": "vpc-0027bc837f4de0d04"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09605dde8402ee5a5",
            "owner_id": "625005514785",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "vpc_id": "vpc-0027bc837f4de0d04"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08b4ab1163253ee44",
            "owner_id": "625005514785",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "vpc_id": "vpc-0027bc837f4de0d04"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "custom_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:625005514785:security-group/sg-0a9b36d817f658a0c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a9b36d817f658a0c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 433,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 433
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "custom security group",
            "name_prefix": "",
            "owner_id": "625005514785",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0027bc837f4de0d04"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:625005514785:subnet/subnet-0626ab7f15a0942bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.10.8.0/21",
            "id": "subnet-0626ab7f15a0942bb",
            "map_public_ip_on_launch": false,
            "owner_id": "625005514785",
            "vpc_id": "vpc-0027bc837f4de0d04"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:625005514785:subnet/subnet-02ed664f9c6b747f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.10.16.0/21",
            "id": "subnet-02ed664f9c6b747f0",
            "map_public_ip_on_launch": false,
            "owner_id": "625005514785",
            "vpc_id": "vpc-0027bc837f4de0d04"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:625005514785:subnet/subnet-0c7428287962e027c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.10.0.0/21",
            "id": "subnet-0c7428287962e027c",
            "map_public_ip_on_launch": false,
            "owner_id": "625005514785",
            "vpc_id": "vpc-0027bc837f4de0d04"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:625005514785:vpc/vpc-0027bc837f4de0d04",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/18",
            "default_network_acl_id": "acl-015c236b347bd2fb5",
            "default_route_table_id": "rtb-069e8095630accdf8",
            "default_security_group_id": "sg-08318821b2a752918",
            "dhcp_options_id": "dopt-bbabaadd",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0027bc837f4de0d04",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-069e8095630accdf8",
            "owner_id": "625005514785"
          }
        }
      ]
    }
  ]
}